scripts for getting follower and leader ports

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ dependencies = []
 
 [options]
 zip_safe = false
+packages=find:
 
 [options.extras_require]
 dev =
@@ -25,3 +26,10 @@ dev =
 exclude =
     tools*
     venv*
+
+[options.entry_points]
+console_scripts =
+    cogitron-video-stream = cogitron.scripts.opencv_video_stream:main
+    cogitron-follower-port = cogitron.scripts.get_follower_port:main
+    cogitron-leader-port = cogitron.scripts.get_leader_port:main
+    cogitron-teleoperate = cogitron.scripts.teleoperate:main
