Script for camera config

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,5 @@ console_scripts =
     cogitron-video-stream = cogitron.scripts.opencv_video_stream:main
     cogitron-follower-port = cogitron.scripts.get_follower_port:main
     cogitron-leader-port = cogitron.scripts.get_leader_port:main
+    cogitron-camera-config = cogitron.scripts.get_camera_config:main
     cogitron-teleoperate = cogitron.scripts.teleoperate:main
