Include record cli from lerobot into cogitron

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,4 @@ console_scripts =
     cogitron-leader-port = cogitron.scripts.get_leader_port:main
     cogitron-camera-config = cogitron.scripts.get_camera_config:main
     cogitron-teleoperate = cogitron.scripts.teleoperate:main
+    cogitron-record = cogitron.scripts.record:main
