test arm script

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,5 @@ console_scripts =
     cogitron-camera-config = cogitron.scripts.get_camera_config:main
     cogitron-teleoperate = cogitron.scripts.teleoperate:main
     cogitron-record = cogitron.scripts.record:main
+    cogitron-test-follower = cogitron.scripts.test_arms:test_follower
+    cogitron-test-leader = cogitron.scripts.test_arms:test_leader
