--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,4 @@ console_scripts =
     cogitron-camera-config = cogitron.scripts.get_camera_config:main
     cogitron-teleoperate = cogitron.scripts.teleoperate:main
     cogitron-record = cogitron.scripts.record:main
+    cogitron-waffel-checker = computer-vision.scripts.treininggon:main
